--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "web-component-sandbox",
   "version": "1.0.0",
   "description": "A simple web server to use for playing around with JS web components",
+  "engines": {
+    "node": ">=20.18.0"
+  },
+  "workspaces": [
+    "server"
+  ],
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +22,15 @@
     "shadowdom"
   ],
   "author": "Andy Maskiell",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.21.0",
+    "express-handlebars": "^8.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3"
+  }
 }
