--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,13 @@
     "name": "@wcs/server",
     "version": "1.0.0",
     "private": true,
+    "source": "./index.html",
     "scripts": {
-        "start": "node ./index.js"
+        "start": "parcel",
+        "build": "parcel build"
     },
-    "dependencies": {
-        "express": "^4.21.0",
-        "express-handlebars": "^8.0.1"
-    }
+    "devDependencies": {
+        "parcel": "^2.12.0"
+    },
+    "browserslist": "> 0.5%, last 2 versions, not dead"
 }
