Update gitignore and docker setup

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-iron AS packages
 ENV NODE_ENV=development
-EXPOSE 3030
+EXPOSE 1234
 WORKDIR /opt/server
 COPY package.json package-lock.json ./
 RUN npm install
@@ -8,4 +8,4 @@ RUN npm install
 
 FROM packages AS sandbox
 WORKDIR /opt/server
-ENTRYPOINT [ "node", "server/index.js" ]
+ENTRYPOINT [ "npm", "run", "start" ]
