--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@
 
 services:
   sandbox-server:
+    container_name: wcs-server
     build:
       context: .
       dockerfile: server/Dockerfile
@@ -12,4 +13,5 @@ services:
       - "1234:1234"
     volumes:
       - ./server:/opt/server
+      - /opt/server/dist
       - /opt/server/node_modules
