--- a/package.json
+++ b/package.json
@@ -23,14 +23,11 @@
   ],
   "author": "Andy Maskiell",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.21.0",
-    "express-handlebars": "^8.0.1"
-  },
   "devDependencies": {
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "parcel": "^2.12.0",
     "prettier": "^3.3.3"
   }
 }
