--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "author": "Andy Maskiell",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
     "parcel": "^2.12.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "prettier-plugin-multiline-arrays": "^3.0.6"
   }
 }
