--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "parcel": "^2.12.0",
     "prettier": "^3.3.3",
     "prettier-plugin-multiline-arrays": "^3.0.6"
+  },
+  "dependencies": {
+    "globals": "^15.10.0"
   }
 }
