--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "web",
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
     "parcel": "^2.12.0",
     "prettier": "^3.3.3",
     "prettier-plugin-multiline-arrays": "^3.0.6"
